completa header e jumbotron

--- a/index.html
+++ b/index.html
@@ -40,8 +40,15 @@
             <div class="cont-jumbo">
                 <h1>Tutto ciò che ti serve per il <br> lavoro, in un unico posto</h1>
                 <div class="jumbo-bottom">
-                    <div class="jumbo-left"></div>
-                    <div class="jumbo-right"></div>
+                    <div class="jumbo-left">
+                        <p class="m-bott-70">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente</p>
+                        <a class="button-large" href="#">Inizia la prova gratuita</a>
+                        <p class="m-top-70 m-bott-70">Annulla in qualsiasi momento</p>
+                        <i class="ft-sz50 fa-solid fa-arrow-down"></i>
+                    </div>
+                    <div class="jumbo-right">
+                        <img class="img-jumbo" src="./img/jumbo.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
@@ -52,6 +59,7 @@
             <input class="m-10" type="radio"> Fatturazione Mensile
             <input class="m-10" type="radio"> Fatturazione Annuale
 
+
             
             <div class="piano-business">
                 <div class="tariffa-1"></div>
@@ -60,12 +68,25 @@
             </div>
 
             <div class="contact-enterprise">
-
             </div>
+
+            <div class="box-partner">
+                <div class="lato-sx"></div>
+                <div class="lato-dx"></div>
+            </div>
+
+            <h2> Esegui più operazioni con Dropbox Business</h2>
 
             
 
+
         </div>
+
+
+
+
+
+
 
 
 
